--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,18 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "graphql": "^14.6.0",
     "kafka-node": "^5.0.0",
     "kafkajs": "^1.12.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
+    "react-bootstrap": "^1.0.0",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-websocket": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
