--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.9.8",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -11,15 +13,14 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "graphql": "^14.6.0",
-    "kafka-node": "^5.0.0",
-    "kafkajs": "^1.12.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-bootstrap": "^1.0.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "react-websocket": "^2.1.0"
+    "react-websocket": "^2.1.0",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
